Adjustments have been made according to the comments: 1. The hint text is not in the strings.xml . 2. In the screen layout file, the EditText and the "Clear" button are not in the same FrameLayout (the button on top of the input field). Minor additional edits have been made to the code.

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,14 +14,28 @@
         app:title="@string/search"
         app:titleTextColor="?attr/colorOnPrimary" />
 
-    <EditText
-        android:id="@+id/search_bar"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginHorizontal="@dimen/search_bar_padding_horizontal"
-        android:layout_marginVertical="@dimen/search_bar_padding_vertical"
-        style="@style/search_bar" />
+        android:layout_height="wrap_content">
 
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_search_bar"
+            android:layout_marginHorizontal="@dimen/search_bar_padding_horizontal"
+            android:layout_marginVertical="@dimen/search_bar_padding_vertical"
+            style="@style/search_bar" />
+
+        <ImageView
+            android:id="@+id/cancel_button"
+            android:layout_width="@dimen/search_bar_padding_horizontal"
+            android:layout_height="@dimen/search_bar_padding_horizontal"
+            android:layout_gravity="center_vertical|end"
+            android:src="@drawable/ic_cancel"
+            app:tint="?attr/colorOnSecondary"
+            android:layout_marginEnd="@dimen/margin_end_search"
+            android:visibility="gone" />
+    </FrameLayout>
 
     <ImageView
         style="@style/work_in_progress_image"
