--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,11 @@
     <dimen name="search_bar_padding_horizontal">16dp</dimen>
     <dimen name="search_bar_padding_vertical">8dp</dimen>
     <dimen name="rad_search_bar">8dp</dimen>
+    <dimen name="search_bar_icon_padding_start">13dp</dimen>
+    <dimen name="height_search_bar">36dp</dimen>
+    <dimen name="margin_end_search">14dp</dimen>
+    <dimen name="height_switch_widget">61dp</dimen>
+
 </resources>
 
 
