--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,7 +79,6 @@
 
 
     <style name="search_bar" parent="ThemeOverlay.Material3.TextInputEditText">
-
         <item name="android:maxLines">1</item>
         <item name="android:hint">@string/search_title</item>
         <item name="android:textColorHint">?attr/colorSecondaryVariant</item>
@@ -88,6 +87,7 @@
         <item name="android:drawableTint">?attr/colorOnSecondary</item>
         <item name="android:drawablePadding">@dimen/search_bar_padding_horizontal</item>
         <item name="android:padding">@dimen/search_bar_padding_vertical</item>
+        <item name="android:paddingStart">@dimen/search_bar_icon_padding_start</item>
         <item name="android:background">@drawable/search_bar</item>
         <item name="android:textCursorDrawable">@drawable/ic_cursor</item>
         <item name="android:textColor">?attr/colorSecondary</item>
