--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -38,6 +38,7 @@
         <item name="colorOnPrimary">@color/yp_white</item>
         <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
+        <item name="colorSecondaryVariant">@color/yp_text_gray</item>
 
     </style>
 
