--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,22 +1,41 @@
 <resources>
-    <dimen name="text_22">22sp</dimen>
+    <!--text-->
+    <dimen name="text_11">11sp</dimen>
     <dimen name="text_16">16sp</dimen>
-    <dimen name="int_butt_main">8dp</dimen>
-    <dimen name="rad_butt_main">16dp</dimen>
-    <dimen name="padding_20">20dp</dimen>
-    <dimen name="top_20">20dp</dimen>
+    <dimen name="text_22">22sp</dimen>
+
+    <!--padding-->
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="padding_13dp">13dp</dimen>
+    <dimen name="padding_14dp">14dp</dimen>
+    <dimen name="padding_16dp">16dp</dimen>
+    <dimen name="padding_20dp">20dp</dimen>
+
+    <!--height-->
+    <dimen name="height_36dp">36dp</dimen>
+    <dimen name="height_61dp">61dp</dimen>
+    <dimen name="height_0dp">0dp</dimen>
+
+    <!--weight-->
+    <dimen name="weight_1">1</dimen>
+
+    <!--top-->
+    <dimen name="top_1">1dp</dimen>
     <dimen name="top_10">10dp</dimen>
-    <dimen name="main_height_butt">0dp</dimen>
-    <dimen name="main_weight_butt">1</dimen>
-    <dimen name="sett_item_height">61dp</dimen>
-    <dimen name="sett_item_marginTop">24dp</dimen>
-    <dimen name="search_bar_padding_horizontal">16dp</dimen>
-    <dimen name="search_bar_padding_vertical">8dp</dimen>
-    <dimen name="rad_search_bar">8dp</dimen>
-    <dimen name="search_bar_icon_padding_start">13dp</dimen>
-    <dimen name="height_search_bar">36dp</dimen>
-    <dimen name="margin_end_search">14dp</dimen>
-    <dimen name="height_switch_widget">61dp</dimen>
+    <dimen name="top_20">20dp</dimen>
+    <dimen name="top_24">24dp</dimen>
+
+    <!--end-->
+    <dimen name="end_12dp">12dp</dimen>
+    <dimen name="end_14dp">14dp</dimen>
+
+
+    <!--for music item -->
+    <dimen name="music_search_item">16dp</dimen>
+    <dimen name="music_image_size">45dp</dimen>
+    <dimen name="small_icon_size">16dp</dimen>
+    <dimen name="big_icon_size">24dp</dimen>
 
 </resources>
 
