--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- ________________________________Стили для Activity_main________________________________ -->
 
     <style name="main_layout_button_style" parent="Widget.MaterialComponents.Button.UnelevatedButton"> <!-- Стиль для кнопок главного экрана -->
-        <item name="iconPadding">@dimen/int_butt_main</item>
+        <item name="iconPadding">@dimen/padding_8dp</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">?attr/colorOnPrimary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
@@ -12,7 +12,7 @@
         <item name="android:textSize">@dimen/text_22</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
-        <item name="cornerRadius">@dimen/rad_butt_main</item>
+        <item name="cornerRadius">@dimen/padding_16dp</item>
     </style>
 
     <style name="main_layout_text_toolbar" parent="TextAppearance.Widget.AppCompat.Toolbar.Title"> <!-- Стиль для текста тулбара главного экрана -->
@@ -71,7 +71,7 @@
 
     <style name="work_in_progress_text"> <!-- Стиль для текста заглушки -->
         <item name="android:orientation">vertical</item>
-        <item name="android:padding">@dimen/padding_20</item>
+        <item name="android:padding">@dimen/padding_20dp</item>
         <item name="android:text">@string/tbd</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textSize">@dimen/text_22</item>
@@ -85,15 +85,23 @@
         <item name="android:inputType">text</item>
         <item name="android:drawableStart">@drawable/ic_search</item>
         <item name="android:drawableTint">?attr/colorOnSecondary</item>
-        <item name="android:drawablePadding">@dimen/search_bar_padding_horizontal</item>
-        <item name="android:padding">@dimen/search_bar_padding_vertical</item>
-        <item name="android:paddingStart">@dimen/search_bar_icon_padding_start</item>
+        <item name="android:drawablePadding">@dimen/padding_16dp</item>
+        <item name="android:padding">@dimen/padding_8dp</item>
+        <item name="android:paddingStart">@dimen/padding_13dp</item>
         <item name="android:background">@drawable/search_bar</item>
         <item name="android:textCursorDrawable">@drawable/ic_cursor</item>
         <item name="android:textColor">?attr/colorSecondary</item>
         <item name="android:textIsSelectable">true</item>
         <item name="android:focusedByDefault">true</item>
     </style>
+
+    <style name="SearchTextStyleView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textFontWeight">400</item>
+        <item name="maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+    </style>
+
 </resources>
 
 
