--- a/app/src/main/res/layout/activity_music_search_item.xml
+++ b/app/src/main/res/layout/activity_music_search_item.xml
@@ -48,7 +48,7 @@
                 style="@style/SearchTextStyleView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorSecondaryVariant"
+                android:textColor="?attr/colorOnSecondary"
                 android:textSize="@dimen/text_11"
                 tools:text="The Beatles" />
 
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_separator"
-                android:textColor="?attr/colorSecondaryVariant"
+                android:textColor="?attr/colorOnSecondary"
                 android:textSize="@dimen/text_11" />
 
             <TextView
@@ -66,7 +66,7 @@
                 style="@style/SearchTextStyleView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorSecondaryVariant"
+                android:textColor="?attr/colorOnSecondary"
                 android:textSize="@dimen/text_11"
                 tools:text="5:12" />
 
