--- a/app/src/main/res/layout/activity_music_search_item.xml
+++ b/app/src/main/res/layout/activity_music_search_item.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/padding_12dp"
         android:scaleType="fitCenter"
-        tools:srcCompat="@drawable/ic_snake" />
+        tools:srcCompat="@drawable/ic_placeholder" />
 
     <LinearLayout
         android:layout_width="0dp"
