--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,6 +47,41 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <LinearLayout
+        android:id="@+id/placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/placeholderImage"
+            android:layout_width="@dimen/err_pic_size"
+            android:layout_height="@dimen/err_pic_size"
+            android:layout_gravity="center_horizontal"
+            tools:src="@drawable/nothing"
+            android:layout_marginTop="@dimen/top_120"
+            android:layout_marginBottom="16dp" />
+
+        <TextView
+            android:id="@+id/placeholderMessage"
+            android:layout_width="@dimen/weight_312dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:textColor="?attr/colorOnPrimary"
+            android:textSize="@dimen/text_19"
+            tools:text="@string/connect_err_mess"
+            android:textFontWeight="@dimen/weight_400"
+            android:fontFamily="@font/ys_display_medium" />
+
+        <Button
+            android:id="@+id/updateResponse"
+            style="@style/SearchButtonUpdateStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/update" />
+
+    </LinearLayout>
 
 </LinearLayout>
 
