Sprint 11. HW. 1. Добавлееы классы для работы API (api.kt, ItunesResponse.kt, ResultResponse.kt) 2. Скорректирован класс Track.kt для корректной работы api 3. TrackAdapter.kt - Адаптер отображения списка треков скорректирован, добавлен список для отображения в RecyclerView 4. TrackViewHolder.kt - скорректировано форматирование и установка времени трека 5. Добавлены комментарии по коду

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -70,7 +70,7 @@
             android:textAlignment="center"
             android:textColor="?attr/colorOnPrimary"
             android:textSize="@dimen/text_19"
-            tools:text="@string/connect_err_mess"
+            tools:text="@string/connect_error"
             android:textFontWeight="@dimen/weight_400"
             android:fontFamily="@font/ys_display_medium" />
 
