--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -69,9 +69,9 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="@dimen/text_19"
+            android:textSize="19sp"
             tools:text="@string/connect_error"
-            android:textFontWeight="@dimen/weight_400"
+            android:textStyle="normal"
             android:fontFamily="@font/ys_display_medium" />
 
         <Button
