--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_36dp"
             android:layout_marginHorizontal="@dimen/padding_16dp"
-            android:layout_marginVertical="@dimen/padding_8dp" />
+            android:layout_marginVertical="@dimen/padding_8dp"
+            android:autofillHints=""
+            android:imeOptions="actionDone"
+            android:singleLine="true" />
 
         <ImageView
             android:id="@+id/cancel_button"
