--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,10 +104,10 @@
 
     <style name="SearchButtonUpdateStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="cornerRadius">@dimen/radius_16dp</item>
-        <item name="android:textColor">@color/white</item>
+
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:backgroundTint">@color/yp_black</item>
+        <item name="android:backgroundTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginTop">@dimen/top_24</item>
