--- a/app/src/main/res/layout/activity_music_search_item.xml
+++ b/app/src/main/res/layout/activity_music_search_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="@dimen/height_61dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/albumImage"
