--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -38,9 +38,9 @@
             android:layout_marginEnd="@dimen/end_30dp"
             android:contentDescription="@string/clear_text"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_cancel_icon"
+            android:src="@drawable/ic_cancel"
             android:visibility="gone"
-            app:tint="?attr/colorOnContainer" />/>
+            app:tint="?attr/colorPrimaryVariant" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -100,7 +100,7 @@
             android:text="@string/history_title"
             android:gravity="center"
             android:fontFamily="@font/ys_display_medium"
-            android:textSize="@dimen/medium_text_size"
+            android:textSize="@dimen/text_19"
             android:textColor="?attr/colorOnSecondary"
             android:layout_marginTop="@dimen/extra_padding" />
 
@@ -108,15 +108,15 @@
             android:id="@+id/recycle_history_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/small_padding"
+            android:layout_marginTop="@dimen/padding_8dp"
             android:layout_weight="1"
-            tools:listitem="@layout/activity_search_item">
+            tools:listitem="@layout/activity_music_search_item">
 
         </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/clear_history"
-            style="@style/SearchButtonStyle"
+            style="@style/SearchButtonUpdateStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/clear_history" />
