--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,7 +40,7 @@
             android:scaleType="fitCenter"
             android:src="@drawable/ic_cancel"
             android:visibility="gone"
-            app:tint="?attr/colorPrimaryVariant" />
+            app:tint="?attr/colorOnSecondary" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -101,7 +101,8 @@
             android:gravity="center"
             android:fontFamily="@font/ys_display_medium"
             android:textSize="@dimen/text_19"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="?attr/colorOnPrimary"
+            android:backgroundTint="?attr/colorOnPrimary"
             android:layout_marginTop="@dimen/extra_padding" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -114,9 +115,9 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
-        <Button
+       <Button
             android:id="@+id/clear_history"
-            style="@style/SearchButtonUpdateStyle"
+            style="@style/SearchButtonClearHistoryStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/clear_history" />
