--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -53,13 +53,13 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
-        android:id="@+id/placeholder_layout"
+        android:id="@+id/placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/placeholder_image"
+            android:id="@+id/placeholderImage"
             android:layout_width="@dimen/err_pic_size"
             android:layout_height="@dimen/err_pic_size"
             android:layout_gravity="center_horizontal"
@@ -68,7 +68,7 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
-            android:id="@+id/placeholder_message"
+            android:id="@+id/placeholderMessage"
             android:layout_width="@dimen/weight_312dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -80,12 +80,13 @@
             android:fontFamily="@font/ys_display_medium" />
 
         <Button
-            android:id="@+id/update_response"
+            android:id="@+id/updateResponse"
             style="@style/SearchButtonUpdateStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/update"
             android:textColor="?attr/colorPrimary" />
+
 
     </LinearLayout>
     <LinearLayout
