--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -44,4 +44,12 @@
 
     </style>
 
+    <style name="Theme.PlaylistMakerPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/yp_black</item>
+        <item name="colorOnPrimary">@color/yp_white</item>
+        <item name="colorSecondary">@color/yp_black</item>
+        <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
+        <item name="colorSecondaryVariant">@color/yp_text_gray</item>
+
+    </style>
 </resources>
