--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,19 +23,19 @@
             android:id="@+id/search_bar"
             style="@style/search_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_36dp"
-            android:layout_marginHorizontal="@dimen/padding_16dp"
-            android:layout_marginVertical="@dimen/padding_8dp"
+            android:layout_height="@dimen/dp_36"
+            android:layout_marginHorizontal="@dimen/dp_16"
+            android:layout_marginVertical="@dimen/dp_8"
             android:autofillHints=""
             android:imeOptions="actionDone"
             android:singleLine="true" />
 
         <ImageView
             android:id="@+id/cancel_button"
-            android:layout_width="@dimen/padding_16dp"
+            android:layout_width="@dimen/dp_16"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/end_30dp"
+            android:layout_marginEnd="@dimen/dp_30"
             android:contentDescription="@string/clear_text"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_cancel"
@@ -47,7 +47,7 @@
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/music_search_item"
+        android:layout_marginTop="@dimen/dp_16"
         tools:listitem="@layout/activity_music_search_item">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -60,16 +60,16 @@
 
         <ImageView
             android:id="@+id/placeholderImage"
-            android:layout_width="@dimen/err_pic_size"
-            android:layout_height="@dimen/err_pic_size"
+            android:layout_width="@dimen/dp_120"
+            android:layout_height="@dimen/dp_120"
             android:layout_gravity="center_horizontal"
             tools:src="@drawable/nothing"
-            android:layout_marginTop="@dimen/top_120"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginTop="@dimen/dp_120"
+            android:layout_marginBottom="@dimen/dp_16"/>
 
         <TextView
             android:id="@+id/placeholderMessage"
-            android:layout_width="@dimen/weight_312dp"
+            android:layout_width="@dimen/dp_312"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textAlignment="center"
@@ -104,13 +104,13 @@
             android:textSize="@dimen/text_19"
             android:textColor="?attr/colorOnPrimary"
             android:backgroundTint="?attr/colorOnPrimary"
-            android:layout_marginTop="@dimen/extra_padding" />
+            android:layout_marginTop="@dimen/dp_24" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle_history_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/padding_8dp"
+            android:layout_marginTop="@dimen/dp_8"
             android:layout_weight="1"
             tools:listitem="@layout/activity_music_search_item">
 
