--- a/app/src/main/res/layout/activity_music_search_item.xml
+++ b/app/src/main/res/layout/activity_music_search_item.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/height_61dp"
+    android:minHeight="@dimen/dp_61"
     android:orientation="horizontal"
     android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/albumImage"
-        android:layout_width="@dimen/music_image_size"
-        android:layout_height="@dimen/music_image_size"
+        android:layout_width="@dimen/dp_45"
+        android:layout_height="@dimen/dp_45"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/padding_12dp"
+        android:layout_marginStart="@dimen/dp_12"
         android:scaleType="fitCenter"
         tools:srcCompat="@drawable/ic_placeholder" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/padding_8dp"
+        android:layout_marginStart="@dimen/dp_8"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -29,7 +29,7 @@
             style="@style/SearchTextStyleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_14dp"
+            android:layout_marginTop="@dimen/dp_14"
             android:gravity="start|center_vertical"
             android:textColor="?attr/colorOnPrimary"
             android:textSize="@dimen/text_16"
@@ -38,8 +38,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/top_1"
-            android:layout_marginBottom="@dimen/padding_14dp"
+            android:layout_marginTop="@dimen/dp_1"
+            android:layout_marginBottom="@dimen/dp_14"
             android:gravity="start|center_vertical"
             android:orientation="horizontal">
 
@@ -75,11 +75,11 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="@dimen/big_icon_size"
-        android:layout_height="@dimen/big_icon_size"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/dp_24"
         android:layout_gravity="center"
-        android:layout_marginStart="@dimen/padding_8dp"
-        android:layout_marginEnd="@dimen/end_12dp"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_12"
         android:backgroundTint="?attr/colorSecondaryVariant"
         app:srcCompat="@drawable/ic_forward_arrow" />
 
