--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- ________________________________Стили для Activity_main________________________________ -->
 
     <style name="main_layout_button_style" parent="Widget.MaterialComponents.Button.UnelevatedButton"> <!-- Стиль для кнопок главного экрана -->
-        <item name="iconPadding">@dimen/padding_8dp</item>
+        <item name="iconPadding">@dimen/dp_8</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">?attr/colorOnPrimary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
@@ -12,7 +12,7 @@
         <item name="android:textSize">@dimen/text_22</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
-        <item name="cornerRadius">@dimen/padding_16dp</item>
+        <item name="cornerRadius">@dimen/dp_16</item>
     </style>
 
     <style name="main_layout_text_toolbar" parent="TextAppearance.Widget.AppCompat.Toolbar.Title"> <!-- Стиль для текста тулбара главного экрана -->
@@ -71,7 +71,7 @@
 
     <style name="work_in_progress_text"> <!-- Стиль для текста заглушки -->
         <item name="android:orientation">vertical</item>
-        <item name="android:padding">@dimen/padding_20dp</item>
+        <item name="android:padding">@dimen/dp_20</item>
         <item name="android:text">@string/tbd</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textSize">@dimen/text_22</item>
@@ -85,9 +85,9 @@
         <item name="android:inputType">text</item>
         <item name="android:drawableStart">@drawable/ic_search</item>
         <item name="android:drawableTint">?attr/colorOnSecondary</item>
-        <item name="android:drawablePadding">@dimen/padding_16dp</item>
-        <item name="android:padding">@dimen/padding_8dp</item>
-        <item name="android:paddingStart">@dimen/padding_13dp</item>
+        <item name="android:drawablePadding">@dimen/dp_16</item>
+        <item name="android:padding">@dimen/dp_8</item>
+        <item name="android:paddingStart">@dimen/dp_13</item>
         <item name="android:background">@drawable/search_bar</item>
         <item name="android:textCursorDrawable">@drawable/ic_cursor</item>
         <item name="android:textColor">?attr/colorSecondary</item>
@@ -103,41 +103,59 @@
     </style>
 
     <style name="SearchButtonUpdateStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="cornerRadius">@dimen/radius_16dp</item>
+        <item name="cornerRadius">@dimen/dp_16</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:backgroundTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginTop">@dimen/top_24</item>
+        <item name="android:layout_marginTop">@dimen/dp_24</item>
     </style>
 
 
     <style name="SearchButtonClearHistoryStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="cornerRadius">@dimen/radius_16dp</item>
+        <item name="cornerRadius">@dimen/dp_16</item>
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:textSize">@dimen/text_14</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:backgroundTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginTop">@dimen/top_24</item>
+        <item name="android:layout_marginTop">@dimen/dp_24</item>
 
     </style>
     <style name="SearchYouLookedStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="cornerRadius">@dimen/radius_16dp</item>
+        <item name="cornerRadius">@dimen/dp_16</item>
         <item name="android:textColor">"?attr/colorPrimary"</item>
         <item name="android:textSize">@dimen/text_19</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:backgroundTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginTop">@dimen/top_24</item>
+        <item name="android:layout_marginTop">@dimen/dp_24</item>
 
     </style>
 
+    <style name="AudioPlayerLeftText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/text_14</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/yp_text_gray</item>
+        <item name="android:layout_marginBottom">@dimen/dp_12</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
 
+    <style name="AudioPlayerRightText" parent="AudioPlayerLeftText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:gravity">end</item>
+    </style>
 
 </resources>
 
