--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,12 @@
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_24">24dp</dimen>
+    <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_26">26dp</dimen>
+    <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_45">45dp</dimen>
+    <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_61">61dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_312">312dp</dimen>
