--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,7 +28,8 @@
             android:layout_marginVertical="@dimen/dp_8"
             android:autofillHints=""
             android:imeOptions="actionDone"
-            android:singleLine="true" />
+            android:singleLine="true"
+            tools:text="WWwwwWWWWWWWwWWWwwwWWWwwwWWW" />
 
         <ImageView
             android:id="@+id/cancel_button"
@@ -43,11 +44,20 @@
             app:tint="?attr/colorOnSecondary" />
     </FrameLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="44dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/progress_bar"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_16"
+        android:visibility="gone"
         tools:listitem="@layout/activity_music_search_item">
 
     </androidx.recyclerview.widget.RecyclerView>
