--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,5 @@
     <color name="status_bar">@color/yp_blue_light</color>
     <color name="main_navigation_bar">@color/yp_blue</color>
     <color name="navigation_bar">@color/white</color>
-
+    <color name="progress_bar">#6200EE</color>
 </resources>
