--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_main_album"
         tools:text="Beatles" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/iv_play_or_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
