--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -4,7 +4,8 @@
     android:height="84dp"
     android:viewportWidth="84"
     android:viewportHeight="84">
+
     <path
-        android:pathData="M42,0.333C19,0.333 0.333,19 0.333,42C0.333,65 19,83.667 42,83.667C65,83.667 83.667,65 83.667,42C83.667,19 65,0.333 42,0.333ZM33.667,60.75V23.25L58.667,42L33.667,60.75Z"
-        android:fillColor="?attr/colorOnPrimary"/>
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M42 0.333336C19 0.333336 0.333334 19 0.333334 42C0.333334 65 19 83.6667 42 83.6667C65 83.6667 83.6667 65 83.6667 42C83.6667 19 65 0.333336 42 0.333336ZM33.6667 60.75V23.25L58.6667 42L33.6667 60.75Z" />
 </vector>
