--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,6 +91,7 @@
         <item name="android:background">@drawable/search_bar</item>
         <item name="android:textCursorDrawable">@drawable/ic_cursor</item>
         <item name="android:textColor">?attr/colorSecondary</item>
+        <item name="android:textSize">@dimen/text_16</item>
         <item name="android:textIsSelectable">true</item>
         <item name="android:focusedByDefault">true</item>
     </style>
