--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,10 +146,11 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textColor">@color/yp_text_gray</item>
-        <item name="android:layout_marginBottom">@dimen/dp_12</item>
+        <item name="android:layout_marginBottom">@dimen/dp_16</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textFontWeight">400</item>
     </style>
 
     <style name="AudioPlayerRightText" parent="AudioPlayerLeftText">
