HW 15. поправлена xml разметка

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,9 +19,9 @@
         <item name="colorSecondaryVariant">@color/search_bar_day_text</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="tabTextColor">@color/yp_black</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-
+        <item name="android:statusBarColor">@color/yp_white</item>
+        <item name="android:navigationBarColor">@color/yp_white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.PlaylistMakerMedia" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -29,8 +29,9 @@
         <item name="colorOnPrimary">@color/yp_black</item>
         <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_white</item>
+        <item name="android:navigationBarColor">@color/yp_white</item>
+        <item name="android:windowLightStatusBar">true</item>
 
     </style>
 
@@ -41,9 +42,9 @@
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="thumbTint">@color/yp_text_gray</item>
         <item name="trackTint">@color/yp_light_gray</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-
+        <item name="android:statusBarColor">@color/yp_white</item>
+        <item name="android:navigationBarColor">@color/yp_white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -52,8 +53,9 @@
         <item name="colorSecondary">@color/yp_white</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="colorSecondaryVariant">@color/yp_text_gray</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_white</item>
+        <item name="android:navigationBarColor">@color/yp_white</item>
+        <item name="android:windowLightStatusBar">true</item>
 
     </style>
 
@@ -64,8 +66,9 @@
         <item name="colorSecondary">@color/yp_white</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="colorSecondaryVariant">@color/yp_text_gray</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_white</item>
+        <item name="android:navigationBarColor">@color/yp_white</item>
+        <item name="android:windowLightStatusBar">true</item>
 
     </style>
 
