--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,8 +19,8 @@
         <item name="colorSecondaryVariant">@color/search_bar_night_text</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="textFillColor">@color/yp_white</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_black</item>
+        <item name="android:navigationBarColor">@color/yp_black</item>
 
     </style>
 
@@ -29,8 +29,8 @@
         <item name="colorOnPrimary">@color/yp_white</item>
         <item name="colorSecondary">@color/yp_white</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_black</item>
+        <item name="android:navigationBarColor">@color/yp_black</item>
 
     </style>
 
@@ -41,8 +41,8 @@
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="thumbTint">@color/yp_blue</item>
         <item name="trackTint">@color/yp_blue_light</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_black</item>
+        <item name="android:navigationBarColor">@color/yp_black</item>
 
     </style>
 
@@ -52,8 +52,8 @@
         <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="colorSecondaryVariant">@color/yp_text_gray</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_black</item>
+        <item name="android:navigationBarColor">@color/yp_black</item>
 
     </style>
 
@@ -64,8 +64,8 @@
         <item name="colorSecondary">@color/yp_black</item>
         <item name="toolbarNavigationButtonStyle">@style/TintedNavigation</item>
         <item name="colorSecondaryVariant">@color/yp_text_gray</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@color/yp_black</item>
+        <item name="android:navigationBarColor">@color/yp_black</item>
 
     </style>
 </resources>
