--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -58,18 +58,18 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_16"
         android:visibility="gone"
-        tools:listitem="@layout/activity_music_search_item">
+        tools:listitem="@layout/activity_search_item">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
-        android:id="@+id/placeholder"
+        android:id="@+id/placeholder_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/placeholderImage"
+            android:id="@+id/placeholder_image"
             android:layout_width="@dimen/dp_120"
             android:layout_height="@dimen/dp_120"
             android:layout_gravity="center_horizontal"
@@ -78,7 +78,7 @@
             android:layout_marginBottom="@dimen/dp_16"/>
 
         <TextView
-            android:id="@+id/placeholderMessage"
+            android:id="@+id/placeholder_message"
             android:layout_width="@dimen/dp_312"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -90,7 +90,7 @@
             android:fontFamily="@font/ys_display_medium" />
 
         <Button
-            android:id="@+id/updateResponse"
+            android:id="@+id/update_response"
             style="@style/SearchButtonUpdateStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dp_8"
             android:layout_weight="1"
-            tools:listitem="@layout/activity_music_search_item">
+            tools:listitem="@layout/activity_search_item">
 
         </androidx.recyclerview.widget.RecyclerView>
 
