--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/dark_theme"
+            android:id="@+id/night_Mode"
             style="@style/setting_layout_switch"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_61"
@@ -64,7 +64,7 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/terms"
+        android:id="@+id/agreement"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_61"
         android:padding="@dimen/dp_20">
