HW_19.1 - Обновлена верстка и xml файлы

--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -23,8 +23,8 @@
         app:tabTextColor="?attr/colorOnPrimary"
         android:layout_height="@dimen/dp_48"
         android:background="?attr/colorPrimary"
-        app:tabIndicatorColor="?attr/colorOnPrimary"
-        app:tabMode="fixed"/>
+        app:tabMode="fixed"
+        app:tabIndicatorColor="?attr/colorOnPrimary"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
