--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -23,11 +23,15 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        style="@style/toolbar_dimensions"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_56"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:foreground="?attr/selectableItemBackground"
+        app:contentInsetStartWithNavigation="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:navigationIcon="@drawable/ic_left_arrow"
+        app:titleTextAppearance="@style/fragment_title"
+        app:titleTextColor="?attr/colorOnPrimary"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/album_cover"
