HW_19.1 - поправлено цветовое отображение кнопок

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,10 @@
         <item name="colorSecondary">@color/yp_white</item>
         <item name="android:statusBarColor">@color/yp_blue</item>
         <item name="android:navigationBarColor">@color/yp_blue</item>
-
+        <item name="colorSecondaryVariant">@color/yp_white</item>
+        <item name="thumbTint">@color/yp_text_gray</item>
+        <item name="trackTint">@color/yp_light_gray</item>
+        <item name="buttonStyle">@color/yp_black</item>
     </style>
 
     <style name="Theme.PlaylistMakerSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
